BugFix: filters no longer cutoff on small screens

--- a/src/components/Timeline/Filter/Filter.css
+++ b/src/components/Timeline/Filter/Filter.css
@@ -28,6 +28,7 @@
 @media (min-width: 992px) { 
     .filtersContainer {
         position: relative;
+        bottom: auto;
     }
 
     .filter {
